--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,28 @@
 
 
 
+        <receiver android:process=":remote" android:name=".Alarm"/>
+
+
+        <receiver android:name=".AutoStart"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+
+        <service
+            android:name=".YourService"
+            android:enabled="true"
+            android:process=":remote" >
+        </service>
+
+
+
+
+
+
+
         <receiver android:name=".AppWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
@@ -25,17 +47,9 @@
                 android:resource="@xml/app_widget_info" />
         </receiver>
 
-        <service
-            android:name=".AppService"
-            android:enabled="true" />
-
-        <receiver android:name=".AutoStart">
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-            </intent-filter>
-        </receiver>
-
-
+<!--        <service-->
+<!--            android:name=".AppService"-->
+<!--            android:enabled="true" />-->
 
         <activity android:name=".MainActivity">
             <intent-filter>
