--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.AndroidHomescreenWidget">
 
 
+        <!--A BroadcastReceiver
+        That start automatically when the device boot up and
+        repeat the task associate with this broadcast receiver.-->
         <receiver
             android:name=".AlarmBroadcastReceiver"
             android:enabled="true"
@@ -24,20 +27,21 @@
         </receiver>
 
 
+        <!--AppWidgetProvider
+        Auto added when new widget was created.-->
         <receiver android:name=".AppWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
-
             <meta-data
                 android:name="android.appwidget.provider"
                 android:resource="@xml/app_widget_info" />
         </receiver>
 
+        <!--MainActivity-->
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
