new appwidget preview image added.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AndroidHomescreenWidget">
+        android:theme="@style/Theme.AndroidHomeScreenWidget">
 
 
         <!--A BroadcastReceiver
@@ -39,7 +39,8 @@
         </receiver>
 
         <!--MainActivity-->
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:theme="@style/Theme.AndroidHomeScreenWidget">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
